Réglage du bug d'overflow sur les content

--- a/design/pc/disposition.css
+++ b/design/pc/disposition.css
@@ -55,17 +55,6 @@ header{
 	text-align:center;
 }
 
-a {
-    color: #5AA0CC;
-    text-decoration: none;
-}
-
-strong {
-	color: #FA0; /** ET EN BO !*/
-}
-
-/*  */
-
 /* Images JS controlled */
 
 .js_controlled{
@@ -103,7 +92,6 @@ imeuf0{
 	border-radius:10px;
 	/* box-shadow:6px 6px 6px rgba(18,35,140,0.6); */
 	padding:20px;
-	padding-bottom:20px;
 	z-index:1;
 }
 
@@ -119,6 +107,16 @@ imeuf0{
 #croix_contenu:hover{
 	background-image:url('./images/croix_contenu_hovered.png');
 }
+
+	/* Mise en page CSS des divers contenus */
+	#contenu a {
+		color: #5AA0CC;
+		text-decoration: none;
+	}
+
+	#contenu strong {
+		color: #FA0; /** ET EN BO !*/
+	}
 
 /* Tout ce qui concerne le lecteur */
 
